app-test/testdata/typesystem/neg/type-comparison-primitive-type/src/cmp.cal
namespace cmp:
    actor IncomparablePrimitiveType() ==> :
        do
            if true = 1 then // error
            end
        end
    end
end